# aur-packages

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  README.md
.claude/: settings.json
.claude/rules/: type-hints.md
.githooks/: commit-msg
.github/workflows/: keep-alive.yml  push-to-aur.yml  test-qq-version.yml  update-packages.yml
docs/: 01-quickstart.md  04-development-guide.md  README.md  packaging-guide.md  troubleshooting.md
docs/superpowers/specs/: 2026-06-01-b2-hash-support-design.md
scripts/: README.md  config.yaml  main.py  pyproject.toml
scripts/constants/: constants.py
scripts/core/: package_updater.py
scripts/fetcher/: fetcher.py
scripts/loaders/: config_loader.py
scripts/parsers/: navicat.py  pypi.py  qq.py  trae.py  zen.py
scripts/tests/fetcher/: test_fetcher.py
scripts/tests/loaders/: test_config_loader.py
scripts/tests/parsers/: test_navicat.py  test_qq.py  test_trae.py  test_zen.py
scripts/tests/updater/: test_pkgbuild_editor.py
scripts/tests/utils/: test_hash.py  test_url_utils.py  test_version_utils.py
scripts/updater/: pkgbuild_editor.py
scripts/utils/: downloader.py  hash.py  url_utils.py
