[project]
name = "aur-auto-update"
version = "0.1.0"
description = "AUR packages update tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "argparse>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.8",
    "ruff>=0.14.10",
]


testpaths = ["tests"]

[dependency-groups]
dev = []

[tool.ty]
# Ty 配置 - Astral 开发的快速 Python 类型检查器
# https://docs.astral.sh/ty/

# 源代码配置
[tool.ty.src]
# 排除的文件和目录
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
]

# 分析配置
[tool.ty.analysis]
# 尊重 type: ignore 注释
respect-type-ignore-comments = true

# 终端输出配置
[tool.ty.terminal]
# 输出格式：full, concise, gitlab, github
output-format = "full"

# 将警告视为错误
error-on-warning = false
